Add zero-trust scheduling flow & mappers
Rework scheduling integration to a zero-trust, anonymous contract and improve performance/robustness. Key changes:

- SchedulingService: manual constructor injection, load active SchedulingConfiguration, build anonymous requests (no PII), log request metadata, avoid N+1 by using two JOIN FETCH queries and merging results, apply algorithm results as TASK_SCHEDULED and SETTLEMENT_ASSIGNED (idempotent), improved logging and validation of seeded statuses.
- Mapper additions: TaskMapper and UserMapper to convert entities to anonymous Algo* requests (filter APPROVED vacations, map roles and constraints).
- Repositories: UserRepository.findAllWithRoles and new TaskRepository queries (findOpenTasksWithRoles/findOpenTasksWithConstraints) to eager-load collections and prevent Cartesian products/N+1.
- DTOs (side-backend): introduce anonymous SchedulingConfigurationDto, TaskDto, UserDto, VacationDto; simplify SchedulingRequestDto/SchedulingResponseDto to enforce zero-trust (no names/titles/emails) and include config.
- AlgoService (side-backend): updated to accept anonymous DTOs and map them to algorithm models (roles/ids converted appropriately), removed PII mapping and adjusted response mapping.
- TaskStatusConstants & DataLoader: add TASK_SCHEDULED and SETTLEMENT_ASSIGNED constants and seed colors; DataLoader updated to seed new statuses/colors.
- Small entity note: add TODO to Settlement entity regarding future JPA/Lombok migration.

Overall intent: send only scheduling-relevant IDs and numeric/temporal data to the algorithm, prevent data leaks, reduce DB round-trips, and make result application idempotent and explicit.